# pymumps

./: PKG-INFO  README.md  generate_wrappers.py  help.txt  info.txt  meson.build  pyproject.toml  setup.py
.github/workflows/: conda.yml  ubuntu.yml
PyMUMPS5.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/: dsimpletest.py
mumps/: __init__.py  _cmumps.pyx  _dmumps.c  _dmumps.pyx  _smumps.pyx  _zmumps.c  _zmumps.pyx
mumps5/: __init__.py  _cmumps5.c  _dmumps5.c  _smumps5.c  _zmumps5.c
src/: __init__.py  _cmumps_5.7.x.pyx  _dmumps.pyx  _dmumps_5.4.x.pyx  _dmumps_5.7.x.pyx  _mumps.tpl  _mumps_5.0.x.tpl  _mumps_5.1.x.tpl  _mumps_5.3.x.tpl  _mumps_5.7.x.tpl  _smumps_5.8.x.pyx  _version.py  _zmumps.pyx  _zmumps_5.7.x.pyx
src/old_pyx/: _cmumps_5.4.x.pyx  _cmumps_5.8.x.pyx  _dmumps_5.8.x.pyx  _smumps_5.7.x.pyx  _zmumps_5.4.x.pyx
src/tests/: test_mumps.py
