#[build-system]
#requires = ["scikit-build-core", "cython"]
#build-backend = "scikit_build_core.build"
[build-system]
build-backend = "mesonpy"#"hatchling.build" #"mesonpy"
requires = [
    "hatch-meson",
    "numpy",
    "meson-python",
    "cython"
    ]


[project]
name = "PyMUMPS"
dynamic = ["version"]
description = "Python bindings for MUMPS, a parallel sparse direct solver"
readme = "README.md"
requires-python = ">=3.8"
license = "BSD-3-Clause"
authors = [
  {name = "Bradley M. Froehle", email = "brad.froehle@gmail.com"},
  {name = "Stephan Rave", email = "stephan.rave@uni-muenster.de"},
]
maintainers = [
  {name = "Stephan Rave", email = "stephan.rave@uni-muenster.de"},
  {name = "Luc Laurent", email = "luc.laurent@lecnam.net"},
  {name = "Olivier De Smet", email = "olivier.desmet@lecnam.net"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
  "mpi4py",
  "numpy",
]

[dependency-groups]
dev = [
  "pytest",
  "scipy",
]

[project.urls]
homepage = "http://github.com/pymumps/pymumps"
source = "http://github.com/pymumps/pymumps"
tracker = "http://github.com/pymumps/pymumps/issues"

#[tool.scikit-build]
#sdist.exclude = [".gitignore", ".gitattributes"]

#[tool.scikit-build.wheel]
#exclude = ["**.pyx"]
#packages = ["mumps"]


#[tool.scikit-build.metadata.version]
#provider = "scikit_build_core.metadata.regex"
#input = "mumps/__init__.py"
#build-backend = "mesonpy"#"hatchling.build" #"mesonpy"
#requires = [
#    "hatch-meson",
#    "numpy",
#    "meson-python",
#    "cython"
#    ]

[tool.meson-python.args]
# setup = ['-Doption=false', '-Dfeature=enabled', '-Dvalue=42']
compile = ['-j8']
# install = ['--tags=bindings']
# dist = ['--include-subprojects']


# [tool.setuptools.dynamic]
# readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.hatch.version]
path = "src/_version.py"

[tool.hatch.build]
# packages = ["SILEXlib"]
only-packages = true
ignore-vcs = false

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[tool.hatch.build.hooks.meson]
[tool.hatch.metadata.hooks.meson]


[project.optional-dependencies]
dev = [
"pylint ~=2.14.0", 
"toml ~=0.10.2", 
"yapf ~=0.32.0"
]
test = [
"pytest", 
"pytest-cov[all]", 
"pytest-benchmark"
]

[tool.pytest.ini_options]
addopts = "" 
#"-n 10"
testpaths = "src/tests"
# addopts = "--cov --cov-report html --cov-report term-missing --cov-fail-under 1"

[tool.coverage.run]
branch = true
command_line = "-m unittest discover -s src/tests/"

[tool.coverage.html]
directory = "coverage_html_report"

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120

[tool.ruff.format]
quote-style = "single"

# [tool.cibuildwheel]
# test-requires = "pytest"
# test-command = "python -m pytest --pyargs SILEXlib.tests"
# manylinux-x86_64-image = "manylinux2014"

# [tool.cibuildwheel.linux]
# repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

# [[tool.cibuildwheel.overrides]]
# select = "cp3{8,9,10,11}-*"


# [tool.setuptools]
# package-dir = {"" = "src"}

# [tool.setuptools.dynamic]
# version = {attr = "XXX.__version__"}
# readme = {file = ["README.md"]}
